k8s/namespaces/base/kube-system/cilium/app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hubble-ui
spec:
  hosts:
    - 'hubble.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: hubble-ui.kube-system.svc.cluster.local
